[tool.poetry]
name = "python-eth-zero-seeker"
version = "0.1.0"
description = ""
authors = ["Ratimon <ratixoxo@gmail.com>"]
readme = "README.md"
packages = [{include = "python_eth_zero_seeker"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
